2004-10-18  David Edmondson  <dme@dme.org>

	* mm-view.el (mm-w3m-cid-retrieve-1): Don't use recursive call
	excessively.

2004-10-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-split-references): accept a nil references
	string and go on blissfully

	* gnus-registry.el (gnus-registry-split-fancy-with-parent): catch
	cases where the references string is non-nil but has no references

	* encrypt.el: add autoload tags

	* spam.el (spam-resolve-registrations-routine): remove article
	from unregistration list too.  Reported by David Hanak
	<dhanak@isis.vanderbilt.edu>

2004-10-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-copy-article-ignored-headers): Default to
	nil.  Changed custom type.

2004-10-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-copy-article-ignored-headers): New variable.

	* gnus-sum.el (gnus-summary-move-article): Use it.

2004-10-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* encrypt.el: add autoload cookies

	* spam.el (spam-backend-article-list-property)
	(spam-backend-get-article-todo-list)
	(spam-backend-put-article-todo-list, )
	(spam-summary-prepare-exit, spam-resolve-registrations-routine):
	resolve registrations separately
	(spam-register-routine): format comments
	(spam-unregister-routine, spam-register-routine): always call with
	specific-articles, no default list
	(spam-summary-prepare-exit): use the spam-classifications function

	* netrc.el (autoload, netrc-parse): use encrypt.el instead of
	gnus-encrypt.el

	* encrypt.el: copied from gnus-encrypt.el

	* gnus-encrypt.el: commented that it's obsolete

2004-10-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-adaptive-pretty-print): New variable.
	(gnus-score-save): Use it.

	* message.el (message-bury): Use `window-dedicated-p'.

2004-10-15  Simon Josefsson  <jas@extundo.com>

	* pop3.el (top-level): Don't require nnheader.
	(pop3-read-timeout): Add.
	(pop3-accept-process-output): Add.
	(pop3-read-response, pop3-retr): Use it.
